register user and confirm email refactor
